--- a/package.json
+++ b/package.json
@@ -11,24 +11,31 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.9.0",
+    "@react-native-community/datetimepicker": "^2.3.2",
     "@react-native-community/masked-view": "^0.1.8",
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
     "apsl-react-native-button": "^3.1.1",
     "axios": "^0.19.2",
+    "moment": "^2.25.3",
+    "native-base": "^2.13.12",
     "navigationbar-react-native": "0.0.5",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-buttons": "0.0.4",
+    "react-native-dynamic-search-bar": "^1.0.1",
     "react-native-elements": "^1.2.7",
     "react-native-exit-app": "^1.1.0",
     "react-native-flexi-radio-button": "^0.2.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-global-props": "^1.1.5",
     "react-native-image-crop-picker": "^0.28.0",
+    "react-native-image-gallery": "^2.1.5",
+    "react-native-modal-datetime-picker": "^8.6.0",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-search-filter": "^0.1.5",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
