--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -151,6 +151,13 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+
+        release {
+            storeFile file('crdform.keystore')
+            storePassword 'tsr1234'
+            keyAlias 'teerayut.k'
+            keyPassword 'tsr1234'
+        }
     }
     buildTypes {
         debug {
@@ -159,7 +166,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://facebook.github.io/react-native/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
